--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,6 +1,10 @@
 
 
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+
+
 // colors
 $c_btn_gradient_1:      #00a8e4;
 $c_btn_gradient_2:      #00a7e5;
@@ -25,7 +29,8 @@ $i:                     'assets/i';
 
 
 // fonts
-$font_main:             'HelveticaNeueCyr',         Arial, Helvetica, sans-serif;
+$font_main:             'HelveticaNeueCyr',     Arial, Helvetica, sans-serif;
+$font_roboto:           'Roboto',               Arial, Helvetica, sans-serif;
 
 
 
