--- a/src/styles/ui-kit.scss
+++ b/src/styles/ui-kit.scss
@@ -100,6 +100,20 @@
 
 
 
+.input_confirm {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+  input {
+    border: 1px solid #000;
+    border-radius: 6px;
+    height: 83px;
+    width: 70px;
+  }
+}
+
+
 .input_wrap {
   font-size: 17px;
   margin: 0 0 15px;
