--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -15,6 +15,7 @@ $c_input_border:        #a19f99;
 
 
 $c_link:                #239ee1;
+$c_link_dark:           #3C4858;
 $c_main:                #777;
 
 $c_special_blue:        #01a9e4;
