--- a/src/styles/popups.scss
+++ b/src/styles/popups.scss
@@ -20,13 +20,27 @@
     line-height: 15px;
     margin-bottom: 15px;
   }
+
+  h3 {
+    font-size: 24px;
+    padding: 0 0 20px;
+  }
 }
+
 
 .popup_bottom {
   display: flex;
   flex-direction: column;
   margin: 52px 0 0;
   text-align: center;
+
+  a {
+    display: inline-block;
+  }
+
+  p {
+    padding: 0 0 20px;
+  }
 }
 
 .popup_close_btn {
@@ -106,3 +120,12 @@
 }
 
 
+.popup_top {
+  text-align: center;
+
+  p {
+    line-height: 32px;
+    font-size: 17px;
+    padding: 0 0 20px;
+  }
+}
