--- a/src/styles/ui-kit.scss
+++ b/src/styles/ui-kit.scss
@@ -103,12 +103,15 @@
 .input_confirm {
   display: flex;
   justify-content: space-between;
+  padding: 0 0 25px;
   width: 100%;
 
   input {
     border: 1px solid #000;
     border-radius: 6px;
     height: 83px;
+    font-size: 50px;
+    text-align: center;
     width: 70px;
   }
 }
@@ -150,4 +153,11 @@
   }
 }
 
+.link_dark,
+.link_dark:visited {
+  color: $c_link_dark;
 
+  &:hover {
+    text-decoration: none;
+  }
+}
