--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -8,12 +8,15 @@
 @import 'v-application_custom';
 
 
+
+@import 'breadcrumbs';
 @import 'footer';
 @import 'header';
 @import 'home';
 @import 'popups';
 @import 'send';
 @import 'search';
+@import 'take';
 @import 'ui-kit';
 
 
