--- a/src/styles/v-application_custom.scss
+++ b/src/styles/v-application_custom.scss
@@ -15,6 +15,20 @@ body {
 
     ul {
       padding: 0;
+
+      &.breadcrumbs {
+        padding: 5px 2px;
+      }
+    }
+
+    .take_results_item__list {
+      p {
+        margin: 0 0 25px;
+
+        &:last-child {
+          margin: 0;
+        }
+      }
     }
   }
 }
