--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -18,8 +18,10 @@ $c_input_border:        #a19f99;
 
 $c_link:                #239ee1;
 $c_link_additional:     #0bb65e;
-$c_link_dark:           #3C4858;
+$c_link_dark:           #3c4858;
 $c_main:                #777;
+
+$c_pagination:          #1f2d3d;
 
 $c_special_blue:        #01a9e4;
 
