--- a/src/styles/breadcrumbs.scss
+++ b/src/styles/breadcrumbs.scss
@@ -39,6 +39,14 @@
       }
     }
   }
+
+  @media only screen and (max-width: 800px) {
+    font-size: 14px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    font-size: 12px;
+  }
 }
 
 
