--- a/src/styles/v-application_custom.scss
+++ b/src/styles/v-application_custom.scss
@@ -7,6 +7,15 @@ body {
 
     a {
       color: $c_link;
+
+      &.btn_more,
+      &.btn_more:visited {
+        color: $c_link_dark;
+
+        &:hover {
+          color: #fff;
+        }
+      }
     }
 
     p {
@@ -18,6 +27,14 @@ body {
 
       &.breadcrumbs {
         padding: 5px 2px;
+
+        @media only screen and (max-width: 1200px) {
+          padding: 5px 10px;
+        }
+      }
+
+      &.pagination {
+        padding: 77px 0 99px;
       }
     }
 
@@ -26,6 +43,12 @@ body {
         margin: 0 0 25px;
 
         &:last-child {
+          margin: 0;
+        }
+      }
+
+      @media only screen and (max-width: 800px) {
+        p {
           margin: 0;
         }
       }
