--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -18,6 +18,9 @@ $c_link:                #239ee1;
 $c_link_dark:           #3C4858;
 $c_main:                #777;
 
+$c_text_dark:           #3C4858;
+$c_text_main:           #000000;
+
 $c_special_blue:        #01a9e4;
 
 $c_special_green:       #48ca87;
