--- a/src/styles/v-application_custom.scss
+++ b/src/styles/v-application_custom.scss
@@ -61,8 +61,10 @@ body {
       }
     }
 
-    .v-card-title {
-      font-size: 17px;
+    .v-card__title {
+      font-size: 24px;
+      font-weight: 600;
+      text-align: center;
     }
 
     .v-card__subtitle {
@@ -72,7 +74,6 @@ body {
       font-size: 17px;
       padding: 0 0 20px;
     }
-
 
 
     .v-input--checkbox {
