8 10 | parcelTake rework,+ parcelOverview page

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -13,6 +13,7 @@
 @import 'footer';
 @import 'header';
 @import 'home';
+@import 'parcel_overview';
 @import 'popups';
 @import 'send';
 @import 'search';
