--- a/src/styles/ui-kit.scss
+++ b/src/styles/ui-kit.scss
@@ -20,6 +20,12 @@
   }
 }
 
+.btn_back,
+.btn_back:visited {
+  background-color: #D4F0FA;
+  color: #000000;
+}
+
 .btn_blue,
 .btn_blue:visited {
   border: 1px solid transparent;
@@ -57,7 +63,6 @@
 .btn_main,
 .btn_main:visited {
   border: 1px solid $c_link;
-  border-radius: 6px;
   color: $c_link;
   padding: 9px 36px 8px;
   text-decoration: none;
@@ -96,7 +101,6 @@
 .btn_primary,
 .btn_primary:visited {
   border: 1px solid $c_link;
-  border-radius: 6px;
   color: $c_link;
   text-decoration: none;
 
@@ -143,7 +147,6 @@
 .btn_submit,
 .btn_submit:visited   {
   border: 1px solid $c_border;
-  border-radius: 6px;
   color: $c_border;
   font-size: 20px;
   line-height: 1.3;
@@ -243,6 +246,15 @@
   }
 }
 
+.link_back {
+  background: url(#{$i}/icons/link_back.svg) 0 0 no-repeat scroll transparent;
+  color: $c_link_back;
+  font-size: 15px;
+  padding: 6px 0 8px 50px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+}
 
 
 .mdi {
@@ -255,3 +267,8 @@
 }
 
 
+.person_rating {
+  background: url(#{$i}/icons/star.svg) 0 0 no-repeat scroll transparent;
+  line-height: 1.1;
+  padding: 0 0 0 20px;
+}
