--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -8,6 +8,8 @@
 // colors
 $c_border:              #01a9e4;
 
+$c_btn_back:            #D4F0FA;
+
 $c_btn_gradient_1:      #00a8e4;
 $c_btn_gradient_2:      #00a7e5;
 $c_btn_gradient_3:      #55d074;
@@ -18,6 +20,7 @@ $c_input_border:        #a19f99;
 
 $c_link:                #239ee1;
 $c_link_additional:     #0bb65e;
+$c_link_back:           #3C4858;
 $c_link_dark:           #3c4858;
 $c_main:                #777;
 
