--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -26,14 +26,15 @@ $c_main:                #777;
 
 $c_pagination:          #1f2d3d;
 
-$c_text_dark:           #3C4858;
-$c_text_main:           #000000;
+$c_popup_bg_primary:    #ffffff;
+$c_popup_bg_secondary:  #01A9E4;
 
 $c_special_blue:        #01a9e4;
-
 $c_special_green:       #48ca87;
-
 $c_search_bg:           #dee2e6;
+
+$c_text_dark:           #3C4858;
+$c_text_main:           #000000;
 
 
 
