--- a/src/styles/v-application_custom.scss
+++ b/src/styles/v-application_custom.scss
@@ -108,6 +108,113 @@ body {
       }
     }
 
+    .v-checkbox_v2 {
+      margin: 0;
+      padding: 0;
+
+      .v-input__slot {
+        margin: 0;
+        padding: 0;
+      }
+
+      .v-label {
+        color: #ffffff;
+        font-size: 15px;
+      }
+
+      .mdi-checkbox-blank-outline {
+        &:before {
+          background: url(#{$i}/icons/checkbox_w.svg) center center no-repeat scroll transparent;
+          content: ' ';
+          height: 27px;
+          width: 27px;
+        }
+      }
+
+      .mdi-checkbox-marked {
+        &:before {
+          content: ' ';
+          background: url(#{$i}/icons/checkbox_w_active.svg) center center no-repeat scroll transparent;
+          height: 27px;
+          width: 27px;
+        }
+      }
+
+      .v-input--selection-controls__input {
+        height: 27px;
+        margin-right: 13px;
+        width: 27px;
+      }
+
+      .v-input--selection-controls__ripple {
+        left: -11px;
+      }
+
+      @media only screen and (max-width: 980px) {
+        .mdi-checkbox-blank-outline {
+          &:before {
+            background-size: cover;
+            height: 42px;
+            width: 42px;
+          }
+        }
+
+        .mdi-checkbox-marked {
+          &:before {
+            background-size: cover;
+            height: 42px;
+            width: 42px;
+          }
+        }
+
+        .v-input--selection-controls__input {
+          height: 42px;
+	        margin-right: 19px;
+	        width: 42px;
+        }
+
+	      .v-input--selection-controls__ripple {
+		      left: -3px;
+	      }
+
+	      .v-label {
+		      font-size: 23px;
+	      }
+      }
+
+	    @media only screen and (max-width: 380px) {
+		    .mdi-checkbox-blank-outline {
+			    &:before {
+				    background-size: cover;
+				    height: 33px;
+				    width: 33px;
+			    }
+		    }
+
+		    .mdi-checkbox-marked {
+			    &:before {
+				    background-size: cover;
+				    height: 33px;
+				    width: 33px;
+			    }
+		    }
+
+		    .v-input--selection-controls__input {
+			    height: 33px;
+			    margin-right: 19px;
+			    width: 33px;
+		    }
+
+		    .v-input--selection-controls__ripple {
+			    left: -8px;
+		    }
+
+		    .v-label {
+			    font-size: 18px;
+		    }
+	    }
+    }
+
     .v-text-field {
       .v-input__slot {
         .v-label {
@@ -116,7 +223,7 @@ body {
         }
 
         .v-label--active {
-            top: 8px;
+          top: 8px;
         }
 
         .v-text-field__slot {
