--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -15,6 +15,7 @@
 @import 'home';
 @import 'parcel_overview';
 @import 'popups';
+@import 'popup_menu';
 @import 'send';
 @import 'search';
 @import 'take';
