--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -8,7 +8,7 @@
 // colors
 $c_border:              #01a9e4;
 
-$c_btn_back:            #D4F0FA;
+$c_btn_back:            #d4f0fa;
 
 $c_btn_gradient_1:      #00a8e4;
 $c_btn_gradient_2:      #00a7e5;
@@ -27,14 +27,17 @@ $c_main:                #777;
 $c_pagination:          #1f2d3d;
 
 $c_popup_bg_primary:    #ffffff;
-$c_popup_bg_secondary:  #01A9E4;
+$c_popup_bg_secondary:  #01a9e4;
+
+$c_popup_menu_hover:    #e6f6fc;
 
 $c_special_blue:        #01a9e4;
 $c_special_green:       #48ca87;
 $c_search_bg:           #dee2e6;
 
-$c_text_dark:           #3C4858;
+$c_text_dark:           #3c4858;
 $c_text_main:           #000000;
+$c_text_special:        #01a9e4;
 
 
 
@@ -54,42 +57,53 @@ $transition:            all .3s ease-in-out;
 
 
 // HelveticaNeueCyr-Bold
-@font-face {
-  font-family: 'HelveticaNeueCyr';
-  src: url('/fonts/HelveticaNeueCyr-Bold.eot');
-  src: local('HelveticaNeueCyr-Bold'),
-  url('/fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
-  url('/fonts/HelveticaNeueCyr-Bold.woff2') format('woff2'),
-  url('/fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
-  url('/fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
-  font-weight: 700;
-  font-style: normal;
-}
+//@font-face {
+//  font-family: 'HelveticaNeueCyr';
+//  src: url('assets/fonts/HelveticaNeueCyr-Bold.eot');
+//  src: local('HelveticaNeueCyr-Bold'),
+//  url('assets/fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
+//  url('assets/fonts/HelveticaNeueCyr-Bold.woff2') format('woff2'),
+//  url('assets/fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
+//  url('assets/fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
+//  font-weight: 700;
+//  font-style: normal;
+//}
 
 // HelveticaNeueCyr-Light
-@font-face {
-  font-family: 'HelveticaNeueCyr';
-  src: url('/fonts/HelveticaNeueCyr-Light.eot');
-  src: local('HelveticaNeueCyr-Light'),
-  url('/fonts/HelveticaNeueCyr-Light.eot?#iefix') format('embedded-opentype'),
-  url('/fonts/HelveticaNeueCyr-Light.woff2') format('woff2'),
-  url('/fonts/HelveticaNeueCyr-Light.woff') format('woff'),
-  url('/fonts/HelveticaNeueCyr-Light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
+//@font-face {
+//  font-family: 'HelveticaNeueCyr';
+//  src: url('assets/fonts/HelveticaNeueCyr-Light.eot');
+//  src: local('HelveticaNeueCyr-Light'),
+//  url('assets/fonts/HelveticaNeueCyr-Light.eot?#iefix') format('embedded-opentype'),
+//  url('assets/fonts/HelveticaNeueCyr-Light.woff2') format('woff2'),
+//  url('assets/fonts/HelveticaNeueCyr-Light.woff') format('woff'),
+//  url('assets/fonts/HelveticaNeueCyr-Light.ttf') format('truetype');
+//  font-weight: 300;
+//  font-style: normal;
+//}
 
 // HelveticaNeueCyr-Roman
 @font-face {
   font-family: 'HelveticaNeueCyr';
-  src: url('/fonts/HelveticaNeueCyr-Roman.eot');
+  src: url('assets/fonts/HelveticaNeueCyr-Roman.eot');
   src: local('HelveticaNeueCyr-Roman'),
-  url('/fonts/HelveticaNeueCyr-Roman.eot?#iefix') format('embedded-opentype'),
-  url('/fonts/HelveticaNeueCyr-Roman.woff2') format('woff2'),
-  url('/fonts/HelveticaNeueCyr-Roman.woff') format('woff'),
-  url('/fonts/HelveticaNeueCyr-Roman.ttf') format('truetype');
+  url('assets/fonts/HelveticaNeueCyr-Roman.eot?#iefix') format('embedded-opentype'),
+  url('assets/fonts/HelveticaNeueCyr-Roman.woff2') format('woff2'),
+  url('assets/fonts/HelveticaNeueCyr-Roman.woff') format('woff'),
+  url('assets/fonts/HelveticaNeueCyr-Roman.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 
-
+// Icon-fonts
+@font-face {
+	font-family: 'icomoon';
+	src:  url('assets/fonts/icomoon.eot?wcg7fy');
+	src:  url('assets/fonts/icomoon.eot?wcg7fy#iefix') format('embedded-opentype'),
+	url('assets/fonts/icomoon.ttf?wcg7fy') format('truetype'),
+	url('assets/fonts/icomoon.woff?wcg7fy') format('woff'),
+	url('assets/fonts/icomoon.svg?wcg7fy#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+	font-display: block;
+}
