--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -14,6 +14,8 @@ $c_btn_gradient_1:      #00a8e4;
 $c_btn_gradient_2:      #00a7e5;
 $c_btn_gradient_3:      #55d074;
 
+$c_elements_bg:         #01a9e4;
+
 $c_input_border:        #a19f99;
 
 
