--- a/src/styles/v-application_custom.scss
+++ b/src/styles/v-application_custom.scss
@@ -66,7 +66,8 @@ body {
     .v-card__title {
       font-size: 24px;
       font-weight: 600;
-      text-align: center;
+	    justify-content: center;
+	    line-height: 1.4;
     }
 
     .v-card__subtitle {
@@ -247,4 +248,13 @@ body {
   }
 }
 
+@media only screen and (max-width: 460px) {
+	body {
+		.v-application {
+			.v-card__title {
+				font-size: 16px;
+			}
+		}
+	}
+}
 
