--- a/src/styles/parcel_overview.scss
+++ b/src/styles/parcel_overview.scss
@@ -1,19 +1,5 @@
-.btn_connect {
-  background: linear-gradient(100.05deg, #00A8E4 74.4%, #00A7E5 74.41%, #55D074 120.36%);
-  border: 1px solid transparent;
-  color: #ffffff;
-  transition: all 0.3s;
-}
 
-.btn_connect:hover {
-  background: #ffffff;
-  border: 1px solid #00A7E5;
-  color: #00A7E5;
-}
 
-.btn_connect:active {
-  opacity: 0.5;
-}
 
 .parcel_view {
   align-items: center;
@@ -22,14 +8,14 @@
   position: relative;
 
   h2 {
+    margin: 0 0 50px;
     text-align: center;
-    margin-bottom: 50px;
   }
 
   h3 {
     color: #01A9E4;
-    font-weight: 600;
     font-size: 24px;
+    font-weight: 600;
     line-height: 29px;
     margin-bottom: 14px;
   }
@@ -37,8 +23,8 @@
 
 .parcel_view__description {
   font-size: 20px;
+  letter-spacing: -.01em;
   line-height: 1.4;
-  letter-spacing: -0.01em;
   margin: 0 0 62px;
 }
 
@@ -54,23 +40,45 @@
 }
 
 .parcel_view__info__item {
-  color: #3C4858;
+  color: $c_text_dark;
   font-size: 20px;
   line-height: 35px;
-  //padding: 50px 0;
 }
 
 .parcel_view__name {
-  color: #3C4858;
+  color: $c_text_dark;
   font-size: 22px;
-  line-height: 25px;
-  margin-left: 20px;
-  padding-top: 8px;
+  line-height: 1.1;
+  margin: 0 0 0 20px;
+  padding: 8px 0 0;
 
-  >span {
+  > span {
     font-weight: 600;
     font-size: 17px;
   }
+}
+
+.parcel_view__person {
+  display: flex;
+}
+
+.parcel_view__photo {
+  border-radius: 50%;
+  overflow: hidden;
+  width: 100px;
+
+  img {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.parcel_view__status {
+  color: $c_text_dark;
+  font-size: 20px;
+  font-style: italic;
+  line-height: 1.2;
+  padding: 8px 0 0;
 }
 
 .parcel_view__wrap {
@@ -81,25 +89,4 @@
   width: 100%;
 }
 
-.parcel_view__person  {
-  display: flex;
-}
 
-.photo {
-  border-radius: 50%;
-  overflow: hidden;
-  width: 94px;
-
-  img {
-    height: 100%;
-    width: 100%;
-  }
-}
-
-.parcel_view__status {
-  color: #3C4858;
-  font-style: italic;
-  font-size: 20px;
-  line-height: 25px;
-  padding-top: 8px;
-}
