--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -21,7 +21,7 @@ h2 {
   font-family: $font_roboto;
   color: #000;
   font-size: 32px;
-  letter-spacing: -.03em;
+  line-height: 1.5;
   text-align: center;
 
   @media only screen and (max-width: 500px) {
@@ -31,6 +31,14 @@ h2 {
   @media only screen and (max-width: 460px) {
     font-size: 23px;
   }
+}
+
+h3 {
+  color: $c_text_special;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.1;
+  margin: 0 0 21px;
 }
 
 
@@ -71,12 +79,12 @@ ul {
 
 .fade-enter-active,
 .fade-leave-active {
-	transition: opacity .5s;
+  transition: opacity .5s;
 }
 
 .fade-enter,
 .fade-leave-to {
-	opacity: 0;
+  opacity: 0;
 }
 
 
@@ -204,28 +212,8 @@ ul {
 }
 
 
+
 // send_or_grab [START]
-.send_or_grab__wrap {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  width: 742px;
-}
-
-.send_or_grab__outer {
-	border-radius: 18px;
-	box-shadow: 1px 7px 33px 1px rgba(#000, .15);
-	height: 320px;
-	padding: 4px;
-	transition: $transition;
-	width: 320px;
-
-	&:hover {
-		background: linear-gradient(90deg, $c_special_blue, $c_special_green);
-		cursor: pointer;
-	}
-}
-
 .send_or_grab__inner {
   align-items: center;
   background-color: #fff;
@@ -244,30 +232,42 @@ ul {
   }
 }
 
-@media only screen and (max-width: 980px) {
-	.send_or_grab__outer {
-		&:first-child {
-			margin: 0 0 38px;
-		}
-	}
+.send_or_grab__outer {
+  border-radius: 18px;
+  box-shadow: 1px 7px 33px 1px rgba(#000, .15);
+  height: 320px;
+  padding: 4px;
+  transition: $transition;
+  width: 320px;
 
-	.send_or_grab__wrap {
+  &:hover {
+    background: linear-gradient(90deg, $c_special_blue, $c_special_green);
+    cursor: pointer;
+  }
+}
+
+.send_or_grab__wrap {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 742px;
+}
+
+@media only screen and (max-width: 980px) {
+  .send_or_grab__outer {
+    &:first-child {
+      margin: 0 0 38px;
+    }
+  }
+
+  .send_or_grab__wrap {
     align-items: center;
     flex-direction: column;
-	  width: auto;
+    width: auto;
   }
 }
 
 @media only screen and (max-width: 460px) {
-	.send_or_grab__outer {
-		height: 246px;
-		width: 246px;
-
-		&:first-child {
-			margin: 0 0 26px;
-		}
-	}
-
   .send_or_grab__inner {
     padding: 0 0 40px;
 
@@ -279,18 +279,40 @@ ul {
       font-size: 23px;
     }
   }
+
+  .send_or_grab__outer {
+    height: 246px;
+    width: 246px;
+
+    &:first-child {
+      margin: 0 0 26px;
+    }
+  }
 }
 // send_or_grab [END]
 
 
+
 .slide-enter-active,
 .slide-leave-active {
-	transition: transform .5s;
+  transition: transform .5s;
 }
 
 .slide-enter,
 .slide-leave-to {
-	transform: translateY(-50%) translateX(100vw);
+  transform: translateY(-50%) translateX(100vw);
+}
+
+
+
+.title_with_btn {
+  padding: 0 120px;
+  position: relative;
+  width: 100%;
+
+  @media #{$tablet_l} {
+    padding: 0 56px;
+  }
 }
 
 
@@ -305,30 +327,30 @@ ul {
 
 // icomoon [START]
 [class^="icon-"], [class*=" icon-"] {
-	/* use !important to prevent issues with browser extensions that change fonts */
-	font-family: 'icomoon' !important;
-	speak: never;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-star_w:before {
-	content: "\e902";
-	color: #fff;
+  content: "\e902";
+  color: #fff;
 }
 .icon-star:before {
-	content: "\e901";
-	color: #01a9e4;
+  content: "\e901";
+  color: #01a9e4;
 }
 .icon-bell:before {
-	content: "\e900";
-	color: #01a9e4;
+  content: "\e900";
+  color: #01a9e4;
 }
 // icomoon [END]
